<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_dialog_menu_period"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_menu_label_period"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_export"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_menu_label_export"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_import"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_menu_label_import"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_clear_data"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_menu_label_clear_data"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_assort_add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_menu_label_assort_add"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_assort_mod"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_menu_label_assort_mod"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_assort_del"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_menu_label_assort_del"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_dialog_menu_exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_menu_label_exit"
        android:textSize="20sp" />

</LinearLayout>
