<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_dialog_regunit_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_regunit_default_code"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		tools:ignore="all" >

            <ImageView
                android:id="@+id/image_dialog_regunit_status"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/dialog_info"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/text_dialog_regunit_status"
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/dialog_regunit_default_statut"
                android:textColor="@android:color/darker_gray"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_dialog_regunit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_regunit_default_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_dialog_regunit_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_regunit_default_info"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

</LinearLayout>
